package bookings;

import java.math.BigDecimal;

public interface ICost {
    BigDecimal calculatePrice();
}
