package interfaces;

public interface IBook {
    boolean book();
}
