package interfaces;

public interface IDescribe {
    void printSummary();
}
